# nasajom_xml_translate

./: .gitignore  README.md  main.py  pyproject.toml
config/: overrides.example.json
examples/: sample_en.xml
src/xml_translator/: __init__.py
src/xml_translator/core/: auto_translator.py  translator.py
src/xml_translator/utils/: logger.py
tests/: test_translator.py
